fixed spacing, cta line break style

--- a/main.scss
+++ b/main.scss
@@ -222,6 +222,7 @@ section {
 
   .intro {
     margin: auto;
+    padding-top: 1rem;
     max-width: 800px;
 
     p {
@@ -460,7 +461,7 @@ section {
   padding: 2rem 1rem;
 
   &::after {
-    background-image: linear-gradient(to right, rgba(255,255,255,0) 2%, rgba(255,255,255,0.75) 10%, rgba(255,255,255,0.75) 90%, rgba(255,255,255,0) 98%);
+    background-image: linear-gradient(to right, rgba(255,255,255,0) 7%, rgba(255,255,255,0.75) 10%, rgba(255,255,255,0.75) 90%, rgba(255,255,255,0) 93%);
     border: 0;
     content: '';
     display: block;
